hidden scrollbar and fixed scroll trough id

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,17 @@
 html {
     scroll-behavior: smooth;
 }
+body {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    &::-webkit-scrollbar {
+        display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
 h1,
 h2,
 h3,
@@ -29,7 +40,7 @@ a,
 p {
     font-family: $font-family-raleway;
 }
-.section-title{
+.section-title {
     font-size: 3rem;
     color: $purple;
 }
